<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.android.sdrive.Login_Pages.Signup_Activity">

    <FrameLayout
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:paddingTop="70dp">

        <android.support.v7.widget.CardView
            android:id="@+id/cv_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            app:cardBackgroundColor="@color/white_color"
            app:cardCornerRadius="6dp"
            app:cardElevation="3dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="10dp"
                android:background="@color/white_color"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:gravity="center"
                    android:text="@string/register"
                    android:textColor="@color/login_hint_color"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/linerone"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:orientation="vertical">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:paddingStart="50dp"
                        android:paddingEnd="30dp">

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColorHint="@color/login_hint_color"
                            android:theme="@style/TextLabel">

                            <android.support.design.widget.TextInputEditText
                                android:id="@+id/et_name"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/selector_bg_edit"
                                android:hint="@string/user_name"
                                android:inputType="textPersonName"
                                android:textColor="#2fa881"
                                android:paddingBottom="2dp"
                                android:textCursorDrawable="@drawable/bg_input_cursor"
                                android:textSize="20dp" />
                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:paddingStart="50dp"
                        android:paddingEnd="30dp">

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColorHint="@color/login_hint_color"
                            android:theme="@style/TextLabel">

                            <android.support.design.widget.TextInputEditText
                                android:id="@+id/et_email"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/selector_bg_edit"
                                android:hint="@string/u_email"
                                android:inputType="textPersonName"
                                android:paddingBottom="2dp"
                                android:textColor="#2fa881"
                                android:textCursorDrawable="@drawable/bg_input_cursor"
                                android:textSize="20dp" />
                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:orientation="horizontal"
                        android:paddingStart="50dp"
                        android:paddingEnd="30dp">

                        <android.support.design.widget.TextInputLayout

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColorHint="@color/login_hint_color"
                            android:theme="@style/TextLabel">

                            <android.support.design.widget.TextInputEditText
                                android:id="@+id/et_password"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/selector_bg_edit"
                                android:hint="@string/Password"
                                android:inputType="textPassword"
                                android:paddingBottom="2dp"
                                android:textColor="#2fa881"
                                android:textCursorDrawable="@drawable/bg_input_cursor"
                                android:textSize="20dp" />
                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:orientation="horizontal"
                        android:paddingStart="50dp"
                        android:paddingEnd="30dp">

                        <android.support.design.widget.TextInputLayout

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColorHint="@color/login_hint_color"
                            android:theme="@style/TextLabel">

                            <android.support.design.widget.TextInputEditText
                                android:id="@+id/et_repeat_password"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/selector_bg_edit"
                                android:hint="@string/repeat_password"
                                android:inputType="textPassword"
                                android:paddingBottom="2dp"
                                android:textColor="#2fa881"
                                android:textCursorDrawable="@drawable/bg_input_cursor"
                                android:textSize="20dp" />
                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>

                </LinearLayout>

                <Button
                    android:id="@+id/btn_sign_up"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/bt_shape"
                    android:stateListAnimator="@drawable/state_list_animator_z"
                    android:text="@string/sign_up"
                    android:textColor="#2fa881">

                </Button>

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|top"
            android:src="@drawable/plus_x"
            android:transitionName="loginFab"
            app:fabSize="normal" />
    </FrameLayout>


</RelativeLayout>
