<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.android.sdrive.Login_Pages.Forgetpass_Activity">

    <FrameLayout
        android:layout_centerInParent="true"
        android:paddingTop="30dp"
        android:layout_width="320dp"
        android:layout_height="wrap_content">
        <android.support.v7.widget.CardView
            android:id="@+id/cv_add"
            app:cardBackgroundColor="@color/forgetpass_background_color"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="320dp"
            app:cardCornerRadius="6dp"
            app:cardElevation="3dp"
            app:cardUseCompatPadding="true"
            >
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot_your_password"
                    android:textColor="#fff"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    />
                <LinearLayout
                    android:layout_marginTop="10dp"
                    android:paddingStart="30dp"
                    android:paddingEnd="30dp"
                    android:layout_width="match_parent"
                    android:layout_height="40dp">
                    <android.support.design.widget.TextInputLayout
                        android:textColorHint="#f0f7f4"
                        android:layout_width="match_parent"
                        android:theme="@style/TextLabel_forget_pass"
                        android:layout_height="wrap_content">
                        <android.support.design.widget.TextInputEditText
                            android:textSize="20dp"
                            android:hint="@string/u_email"
                            android:textColor="#f0f7f4"
                            android:paddingLeft="5dp"
                            android:id="@+id/et_forgot_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPersonName"
                            android:background="@drawable/selector_bg_edit_2"
                            android:textCursorDrawable="@drawable/bg_input_cursor_2"
                            android:paddingBottom="2dp"
                            />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
                <Button
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center_horizontal"
                    android:id="@+id/bt_forget_next"
                    android:background="@drawable/bt_shape_2"
                    android:stateListAnimator="@drawable/state_list_animator_z"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:text="@string/next"
                    android:textColor="#ab47bc"
                    >
                </Button>

            </LinearLayout>
        </android.support.v7.widget.CardView>
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fabSize="normal"
            android:src="@drawable/plus_x"
            android:background="#ab47bc"
            android:transitionName="loginFab"
            android:layout_gravity="center_horizontal|top" />
    </FrameLayout>


</RelativeLayout>
